# solana-auction

./: Anchor.toml  README.md  package.json
app/: next.config.js  package.json
app/assets/: MOCK_DATA.json
app/components/: BiddingForm.js  CreateAuctionForm.js  Header.js  Modal.js  PotCard.js  Table.js  TableRow.js
app/context/: WalletContext.js  context.js
app/pages/: _app.js  index.js
app/styles/: PotCard.module.css  globals.css
app/utils/: constants.js  idl.json  program.js
client/: client.ts
programs/auction/: Cargo.toml
programs/auction/src/: constants.rs  errors.rs  lib.rs  states.rs
tests/: auction.test.ts
utils/: constants.ts  program.ts  secretKey.ts
